--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     align-content: center;
     display: block;
     margin: auto;
+    margin-top:40 px
     }
 
     .skills{
@@ -71,7 +72,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#services">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item">     
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
@@ -147,22 +148,22 @@
 
           <div class="row">
           <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
-            <i class="fab fa-python skills" style="font-size: 100px"></i>
+            <img src="img/skills/python.png" alt="" class = "skills" height="100px" width="100px">
             <p> python</p>
           </div>
 
           <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
-            <i class="fab fa-git skills" style="font-size: 100px"></i>
+            <img src="img/skills/git.png" alt="" class = "skills" height="100px" width="100px">
             <p>git</p>
           </div>
 
           <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
-            <i class="fab fa-docker skills" style="font-size: 100px"></i>
+            <img src="img/skills/docker.png" alt="" class = "skills" height="100px" width="100px">
             <p>docker</p>
           </div>
 
           <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
-            <i class="fab fa-r-project skills" style="font-size: 100px"></i>
+            <img src="img/skills/r.png" alt="" class = "skills" height="100px" width="100px">
             <p>r-lang</p>
           </div>
           
@@ -176,18 +177,32 @@
              <p>spark</p>
           </div>
           <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
-            <img src="img/skills/tableau.jpg" alt="" class = "skills" height="100px" width="100px">
+            <img src="img/skills/tableau.png" alt="" class = "skills" height="100px" width="100px">
              <p>tableau</p>
           </div>
+
           <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
            <img src="img/skills/hive.png" alt="" class = "skills" height="100px" width="100px">
-             <p>tableau</p>
+             <p>hive</p>
+          </div>
+
+          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+            <img src="img/skills/sql.png" alt="" class = "skills" height="100px" width="100px">
+             <p>sql</p>
           </div>
           <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
-            <i class="fab fa-python skills" style="font-size: 100px"></i>
+            <img src="img/skills/nosql.png" alt="" class = "skills" height="100px" width="100px">
+             <p>nosql</p>
           </div>
+
           <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
-            <i class="fab fa-python skills" style="font-size: 100px"></i>
+            <img src="img/skills/airflow.png" alt="" class = "skills" height="100px" width="100px">
+             <p>apache airflow</p>
+          </div>
+
+          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+            <img src="img/skills/dash.png" alt="" class = "skills" height="100px" width="100px">
+             <p>dash by plotly</p>
           </div>
 
         </div>
