--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     align-content: center;
     display: block;
     margin: auto;
-    margin-top:40 px
+    margin-bottom:40 px
     }
 
     .skills{
@@ -151,65 +151,65 @@
       </div>
 
           <div class="row">
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/python.png" alt="" class = "skills" height="100px" width="100px">
             <p> python</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/git.png" alt="" class = "skills" height="100px" width="100px">
             <p>git</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/docker.png" alt="" class = "skills" height="100px" width="100px">
             <p>docker</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/r.png" alt="" class = "skills" height="100px" width="100px">
             <p>r-lang</p>
           </div>
           
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center " >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center " >
              <img src="img/skills/hadoop.png" alt="" class = "skills" height="100px" width="100px">
              <p>hadoop</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/spark.png" alt="" class = "skills" height="100px" width="100px">
              <p>spark</p>
           </div>
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/tableau.png" alt="" class = "skills" height="100px" width="100px">
              <p>tableau</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
            <img src="img/skills/hive.png" alt="" class = "skills" height="100px" width="100px">
              <p>hive</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/sql.png" alt="" class = "skills" height="100px" width="100px">
              <p>sql</p>
           </div>
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/nosql.png" alt="" class = "skills" height="100px" width="100px">
              <p>nosql</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/airflow.png" alt="" class = "skills" height="100px" width="100px">
              <p>apache airflow</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/dash.png" alt="" class = "skills" height="100px" width="100px">
              <p>dash by plotly</p>
           </div>
 
-          <div class="col-lg-2 col-sm-12 col-md-3 text-center" >
+          <div class="col-lg-2 col-sm-6 col-md-3 text-center" >
             <img src="img/skills/pig.png" alt="" class = "skills" height="100px" width="100px">
              <p>apache pig</p>
           </div>
